<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- TODO: replace buttons -->
    <Button
        android:id="@+id/button_main_startGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_mainMenu_startGame"
        android:textSize="28sp" />

    <Button
        android:id="@+id/button_main_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_mainMenu_profile"
        android:textSize="28sp" />

    <Button
        android:id="@+id/button_main_statistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_mainMenu_statistics"
        android:textSize="28sp" />

    <Button
        android:id="@+id/button_main_quitGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_mainMenu_quitGame"
        android:textSize="28sp" />

</LinearLayout>
