<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- TODO: replace buttons -->
    <Button
        android:id="@+id/button_main_startSingleplayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_startGameMenu_singleplayer" />

    <Button
        android:id="@+id/button_main_startMultiplayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_startGameMenu_multiplayer" />

    <Button
        android:id="@+id/button_main_customizeMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_startGameMenu_customizeMap" />

</LinearLayout>
