<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- TODO: replace buttons -->
    <Button
        android:id="@+id/qwe1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_startGameMenu_singleplayer"
        android:textSize="28sp" />

    <Button
        android:id="@+id/qwe2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_startGameMenu_multiplayer"
        android:textSize="28sp" />

    <Button
        android:id="@+id/qwe3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_startGameMenu_customizeMap"
        android:textSize="28sp" />

</LinearLayout>
