<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout_profile_container"
    style="@style/BattleShips.Profile.Background"
    tools:context=".activities.ProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userImage"
        style="@style/BattleShips.Profile.CIV"
        android:src="@drawable/profile_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <LinearLayout
        style="@style/BattleShips.Profile.InfoContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/profile_header_username" />

        <EditText
            android:id="@+id/editText_profile_username"
            style="@style/BattleShips.Profile.Username"
            android:autofillHints=""
            android:hint="@string/profile_header_usernameHint" />

    </LinearLayout>

    <Button
        android:id="@+id/button_profile_save"
        style="@style/BattleShips.Profile.Button"
        android:text="@string/profile_button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

</androidx.constraintlayout.widget.ConstraintLayout>
